<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Name of the application in the launcher [CHAR LIMIT=NONE] -->
    <string name="app_name">Bohrium Client</string>

    <!-- Name of the resource for device registration. -->
    <string name="resource">bohrium</string>

    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>
    <string name="get_devices">Get Devices</string>
    <string name="unregister_device">Unregister Device</string>
    <string name="register_device">Register Device</string>
    <string name="message_device">Message Device</string>
    <string name="get_users">Get Users</string>
    <string name="unregister_user">Unregister User</string>
    <string name="register_user">Register User</string>
    <string name="message_user">Message User</string>
    <string name="get_publications">Get Publications</string>
    <string name="create_publication">Create Publication</string>
    <string name="delete_publication">Delete Publication</string>
    <string name="publish_message">Publish Message</string>
    <string name="subscribe">Subscribe Device</string>
    <string name="unsubscribe">Unsubscribe Device</string>
    <string name="clear">Clear Preferences</string>

    <!-- Header text for "Main" screen [CHAR LIMIT=NONE] -->
    <string name="header_main">Main</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add account&#8230;</string>

    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Connect To The Cloud</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To The Cloud</string>

    <!-- Message text [CHAR LIMIT=NONE] -->
    <string name="contacting_server">Contacting server&#8230;</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Footer text for "Disconnect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_disconnect">Do you want to disconnect?</string>

    <!-- Initial "hello, world" informational message [CHAR LIMIT=NONE] -->
    <string name="instructions">Choose a command from the menu.  Results will be displayed below.</string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_error">Failed to register/unregister %1$s.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_succeeded">Registered %1$s for C2DM messaging.</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="unregistration_succeeded">Unregistered %1$s for C2DM messaging.</string>

</resources>
